--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "block-stream2",
-  "version": "1.1.0",
-  "description": "transform input into equally-sized blocks of output",
+  "name": "block-stream-file",
+  "version": "0.0.1",
+  "description": "transform input into equally-sized blocks of output, using files as buffer",
   "main": "index.js",
   "dependencies": {
     "defined": "^1.0.0",
     "inherits": "^2.0.1",
-    "readable-stream": "^2.0.4"
+    "readable-stream": "^2.0.4",
+    "tmp": "0.0.28"
   },
   "devDependencies": {
-    "tape": "^4.2.2"
+    "tape": "^4.6.0"
   },
   "scripts": {
     "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/substack/block-stream2.git"
+    "url": "git://github.com/brendanashworth/block-stream-file.git"
   },
-  "homepage": "https://github.com/substack/block-stream2",
+  "homepage": "https://github.com/brendanashworth/block-stream-file",
   "keywords": [
     "stream",
     "block",
@@ -26,10 +27,5 @@
     "size",
     "streams2"
   ],
-  "author": {
-    "name": "James Halliday",
-    "email": "mail@substack.net",
-    "url": "http://substack.net"
-  },
   "license": "MIT"
 }
